fix: update body background color for improved contrast

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -98,7 +98,7 @@ body {
   flex-direction: row;
   font-family: Verdana;
   justify-content: space-between;
-  background-color: #1a1a1a;
+  background-color: #212121;
   border: 1.5px solid #34ff66;
   border-radius: 4px;
   width: 100%;
